--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="testimonials3 cid-reNTQDDX01" id="testimonials3-2">
+<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="testimonials3 cid-reNTQDDX01" id="testimonials3-2">
 
     
 
@@ -90,7 +90,7 @@
     
 
     <div class="container">
-        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery1-b" data-slide-to="0" data-toggle="modal"><img src="assets/images/maxresdefault-1280x720-800x450.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">LEGO Assembly</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery1-b" data-slide-to="1" data-toggle="modal"><img src="assets/images/maxresdefault-1280x720-800x450.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Vice Assembly</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery1-b" data-slide-to="2" data-toggle="modal"><img src="assets/images/maxresdefault-1280x720-800x450.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7"><em>Midterm Assembly</em></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Animated"><div href="#lb-gallery1-b" data-slide-to="3" data-toggle="modal"><img src="assets/images/maxresdefault-1280x720-800x450.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Lego Tire</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery1-b"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/maxresdefault-1280x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/maxresdefault-1280x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/maxresdefault-1280x720.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/maxresdefault-1280x720.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery1-b"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery1-b"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery1-b" data-slide-to="0" data-toggle="modal"><img src="assets/images/untitled5-1-1137x791-800x450.png" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">LEGO Assembly</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery1-b" data-slide-to="1" data-toggle="modal"><img src="assets/images/untitled3-1-1403x923-800x450.png" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Vice Assembly</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery1-b" data-slide-to="2" data-toggle="modal"><img src="assets/images/wheel-1-546x457-436x245.png" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7"><em>Midterm Assembly</em></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Animated"><div href="#lb-gallery1-b" data-slide-to="3" data-toggle="modal"><img src="assets/images/untitled2-1-566x441-452x254.png" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Lego Tire</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery1-b"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/untitled5-1-1137x791.png" alt="" title=""></div><div class="carousel-item"><img src="assets/images/untitled3-1-1403x923.png" alt="" title=""></div><div class="carousel-item"><img src="assets/images/wheel-1-546x457.png" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/untitled2-1-566x441.png" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery1-b"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery1-b"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
 
 </section>
@@ -104,7 +104,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/maxresdefault-436x245.jpg" alt="Mobirise" title="">  
+                      <img src="assets/images/untitled5-436x304.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
-                     <img src="assets/images/maxresdefault-436x245.jpg" alt="Mobirise" title="">  
+                     <img src="assets/images/untitled3-436x287.png" alt="Mobirise" title="">  
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/maxresdefault-436x245.jpg" alt="Mobirise" title="">  
+                      <img src="assets/images/wheel-436x365.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -184,7 +184,7 @@ I chose to go further into the character
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
-                     <img src="assets/images/maxresdefault-436x245.jpg" alt="Mobirise" title="">  
+                     <img src="assets/images/untitled2-436x340.png" alt="Mobirise" title="">  
                     </div>
                 </div>
             </div>
